assets/src/scss/layout/_navbar.scss
.top-navigation {
  _-- {
    background: $dark-blue;
    border-bottom: 0 transparent;
    box-shadow: none;
    color: $white;
    fill: $white;
    font-family: var(--headings--font-family);
    font-size: $font-size-sm;
  }

  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 99;

  .admin-bar & {
    top: 46px;

    @media (min-width: 783px) {
      top: 32px;
    }
  }

  @include large-and-up {
    align-items: center;
  }

  input::placeholder _-- {
    color: inherit;
    opacity: 0.5;
  }

  button {
    .icon {
      _-- {
        fill: var(--top-navigation--color, inherit);
      }

      height: 24px;
      top: 0;
      width: 24px;
    }
  }

  .btn-donate {
    _-- {
      border: none;
      font-size: inherit;
      min-width: 116px;
      padding: 2px 17px;

      &:hover {
        border: none;
      }
    }

    height: 44px;
    line-height: 40px;

    @include large-and-up {
      &.dropdown {
        &::after {
          content: "";
          display: inline-block;
          width: 10px;
          height: 10px;
          margin-inline-start: $sp-x;
          mask: url("../../images/chevron.svg") 0 0/10px 10px;
          transform: rotate(90deg);
          transition: transform 150ms linear;
          background-color: currentColor;
          background-repeat: no-repeat;
        }
      }
    }
  }
}

.nav-menu {
  background: var(--top-navigation--background, $dark-blue);
  height: 100%;
  top: 0;
  width: auto;
  z-index: 4;
  display: none;

  ul {
    list-style-type: none;
    margin: 0;
    padding: 0;

    li {
      margin-inline-start: 0;
      margin-inline-end: 0;
    }
  }

  & > ul {
    padding-inline-end: $sp-2;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    flex-grow: 1;

    & > li:not(:last-child) {
      margin-inline-start: $sp-2;
      margin-inline-end: $sp-2;

      @include xx-large-and-up {
        margin-inline-end: $sp-3;
      }
    }
  }

  @include medium-and-less {
    overflow-y: auto;
  }

  @include large-and-up {
    background: inherit;
    display: flex;
    flex-grow: 1;
    height: auto;
  }
}

.nav-submenu {
  _-- {
    width: 240px;
  }
  position: fixed;
  display: none;

  ul {
    width: 100%;
    // The `height` value represents the value of 6 items's height
    // and this selectors's padding
    height: auto;
    max-height: 320px;
    display: block;
    flex-direction: column;
    padding: $sp-2 0;
    overflow-y: auto;
    margin-top: $sp-1;
    border-radius: 4px;
    background: $white;
    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.12);

    @include scrollbar-layout;
  }

  .nav-item {
    width: 100%;
    text-align: left;
    margin-inline: 0;

    a.nav-link {
      --submenu-nav-link-- {
        color: var(--body--color);
        font-family: inherit;
        font-size: $font-size-sm;
        font-weight: 500;
        line-height: 19px;

        &:hover {
          color: var(--body--color);
        }
      }
      text-decoration: none;
      height: 100%;
      display: flex;
      align-items: center;
      padding: 14px $sp-3;

      &:hover {
        background: $grey-10;
      }

      &:before {
        display: none;
      }
    }

    &.active {
      pointer-events: inherit;
    }

    &.active a.nav-link {
      font-weight: bold;
    }
  }
}

a.nav-link {
  --nav-link-- {
    color: $white;

    &:hover {
      color: $white;
    }

    &:visited {
      color: $white;
    }

    &:active {
      color: $white;
    }
  }

  opacity: 1;
  display: inline-block;
  padding: $sp-2 0;
  position: relative;
  width: 100%;
  text-decoration: none !important;

  @include large-and-up {
    padding: 0;
  }

  // Border-bottom for underline animation
  &:before {
    border-bottom-color: var(--nav-link--hover--text-decoration-color, $gp-green);
    border-bottom-style: solid;
    border-bottom-width: 3px;
    bottom: 0;
    content: "";
    left: 0;
    opacity: 1;
    position: absolute;
    right: 0;
    transform: scaleX(0);
    transition: transform 0.25s;
    z-index: -1;
  }
}

// Underline animation with border-bottom
// Using > * because there are some cases where
// there a container, wrapped by the nav-item
// is wrapping the nav-item
a.nav-link:hover:before,
.nav-item:not(.burger-menu-item):hover > a.nav-link:before,
.active > a.nav-link:before,
.active > * > a.nav-link:before {
  transform: scaleX(1);
  transition: transform 0.25s;
  z-index: 1;

  @include large-and-up {
    border-bottom-width: 4px;
  }
}

.nav-donate {
  padding: $sp-2 0;

  @include large-and-up {
    padding: 0;
  }
}

.nav-donate:hover .dropdown::after {
  transform: rotate(-90deg);
}

.nav-item,
.nav-donate {
  _-- {
    font-size: $font-size-sm;
    font-weight: 700;
  }
  color: inherit;

  @include large-and-up {
    line-height: var(--navbar-menu-height);

    &:hover {
      .nav-submenu {
        display: flex;
        z-index: 999;
      }
    }
  }
}

.nav-menu-toggle {
  background: transparent;
  border: none;
  border-radius: 4px;
  padding: 0 24px;

  @include large-and-up {
    display: none;
  }
}

.navigation-bar_min {
  --top-navigation-min-- {
    height: var(--navbar-menu-min-height);
  }

  justify-content: center;

  @include large-and-up {
    justify-content: flex-start;
  }
}

// I'll include these at the end for now because they depend on CSS order.
@import "navbar/site-logo";
@import "navbar/languages";
@import "navbar/search";
@import "navbar/mobile";
@import "navbar/burger-menu";
@import "navbar/desktop-menu";

